--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "html-react-parser": "^5.1.18",
@@ -16,8 +17,12 @@
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "resend": "^4.1.2",
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.6.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "eslint": "^8",
