added contact us api

--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "html-react-parser": "^5.1.18",
-    "next": "14.2.15",
+    "next": "^14.2.24",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.3",
     "resend": "^4.1.2",
     "slick-carousel": "^1.8.1",
     "yup": "^1.6.1",
