--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "formidable": "^3.5.2",
     "html-react-parser": "^5.1.18",
     "next": "^14.2.24",
     "nodemailer": "^6.10.0",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-phone-input-2": "^2.15.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^11.0.3",
     "resend": "^4.1.2",
